<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context="com.borjarnau.tareasemana2.ConfirmarDatos">

    <TextView
        android:id="@+id/tvConfirmarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_datos"
        android:textSize="@dimen/txtConfirmar"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/top"
        android:textColor="@color/escritura_Hint"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:textSize="@dimen/tamañoText"
        android:text="@string/nombre2"
        android:textColor="@color/colorAccent"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top">

        <TextView
            android:id="@+id/tvFech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamañoText"
            android:textColor="@color/colorAccent"
            android:text="@string/fechana"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left"
                android:textSize="@dimen/tamañoText"
                android:text="@string/Dia"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" / "
                android:textColor="@color/colorAccent"
                android:textSize="19dp"/>
            <TextView
                android:id="@+id/tvMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left"
                android:textSize="@dimen/tamañoText"
                android:text="@string/Mes"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" / "
                android:textColor="@color/colorAccent"
                android:textSize="19dp"/>
            <TextView
                android:id="@+id/tvAño"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left"
                android:textSize="@dimen/tamañoText"
                android:text="@string/Año"
                android:textColor="@color/colorAccent"/>



        </LinearLayout>


    </LinearLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <TextView
            android:id="@+id/tvTelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamañoText"
            android:textColor="@color/colorAccent"
            android:text="@string/tlf"/>

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:textSize="@dimen/tamañoText"
            android:text="@string/telefono2"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <TextView
            android:id="@+id/tvEmai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamañoText"
            android:textColor="@color/colorAccent"
            android:text="@string/Emai"/>

        <TextView
            android:id="@+id/tvEmail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:textSize="@dimen/tamañoText"
            android:text="@string/Email2"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <TextView
            android:id="@+id/tvDescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamañoText"
            android:textColor="@color/colorAccent"
            android:text="@string/descrip"/>

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:textSize="@dimen/tamañoText"
            android:text="@string/Descripcion"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>


    <Button
        android:id="@+id/btButtonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_editar"
        android:layout_marginTop="@dimen/botonTop"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal"/>




</LinearLayout>
